# vkedu-serializer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: mainline.yml
examples/: example.cpp
include/: serializer.hpp
tests/: CMakeLists.txt  serializer.cpp
